fix alignment issue

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -84,3 +84,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html,
+body {
+  overflow: hidden;
+  height: 100%;
+}
