--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,7 +1,8 @@
 @import './base.css';
 
+
+
 #app {
-  padding: 2rem;
   font-weight: normal;
   width: 100%;
 }
@@ -28,6 +29,5 @@ a,
 
   #app {
     display: block;
-    padding: 0 2rem;
   }
 }
